force-app/main/default/objects/Regional_Route_MAT__c/Regional_Route_MAT__c.object-meta.xml
<CustomObject>
    <description>The Object is to capture the latest MAT (Moving Annual Total) Values for CM (Current Month) and LM (Last Month)
for the rolling 12 month period from that month for the Regional Routes</description>
    <label>Regional Route MAT</label>
    <nameField>
        <displayFormat>RRM-{000000}</displayFormat>
        <label>Regional-Route-MAT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regional Route MAT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>