force-app/main/default/objects/Regional_Route_MAT__c/fields/CM_QF_Revenue_Dom__c.field-meta.xml
<CustomField>
    <fullName>CM_QF_Revenue_Dom__c</fullName>
    <label>CM QF Revenue Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>