force-app/main/default/objects/Regional_Route_MAT__c/fields/CM_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CM_Total_Revenue__c</fullName>
    <formula>CM_Total_Revenue_Dom__c + CM_Total_Revenue_Intl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>