force-app/main/default/objects/Regional_Route_MAT__c/fields/LM_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LM_Total_Revenue__c</fullName>
    <formula>LM_Total_Revenue_Dom__c + LM_Total_Revenue_Intl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>