force-app/main/default/objects/Regional_Route_MAT__c/fields/MAT_Indicator_Intl__c.field-meta.xml
<CustomField>
    <fullName>MAT_Indicator_Intl__c</fullName>
    <formula>IF(Share_Var_Intl__c != 0, 
IF( 
((Share_Var_Intl__c) &gt;= 0.005), 
IMAGE(&quot;/resource/Green_Up&quot;, &quot;Up&quot;), 
IF( 
(Share_Var_Intl__c &lt;0.005), 
IMAGE(&quot;/resource/Red_Down&quot;, &quot;Down&quot;), 
IMAGE(&quot;/resource/Increment_Nochange&quot;, &quot;No Change&quot;) 
) 
), 
IMAGE(&quot;/resource/Green_Up&quot;, &quot;Up&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAT Indicator Intl</label>
    <type>Text</type>
</CustomField>