force-app/main/default/objects/Regional_Route_MAT__c/fields/QF_Share_Dom_LM__c.field-meta.xml
<CustomField>
    <fullName>QF_Share_Dom_LM__c</fullName>
    <formula>IF(LM_Total_Revenue_Dom__c = 0,NULL, (LM_QF_Revenue_Dom__c / LM_Total_Revenue_Dom__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Share Dom LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>