force-app/main/default/objects/Regional_Route_MAT__c/fields/QF_Share_Intl_LM__c.field-meta.xml
<CustomField>
    <fullName>QF_Share_Intl_LM__c</fullName>
    <formula>IF(LM_Total_Revenue_Intl__c = 0,NULL,(LM_QF_Revenue_Intl__c / LM_Total_Revenue_Intl__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Share Intl LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>