force-app/main/default/objects/Regional_Route_MAT__c/fields/Regional_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Regional_Analytics__c</fullName>
    <label>Regional Analytics</label>
    <referenceTo>Regional_Analytics__c</referenceTo>
    <relationshipLabel>Regional Route MAT</relationshipLabel>
    <relationshipName>Regional_Route_MAT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>